# nachos-console

./: .gitignore  CMakeLists.txt  LICENSE  Tolya_Gosuslugi_-_Nikita_Belov.asc  go.mod  main.go  readme.md  semka_-_Nikolai.asc
.github/workflows/: cmake-single-platform.yml
src/: account.cpp  account.hpp  main.cpp  main.go  other_comms.cpp  other_comms.hpp  pkg-del.cpp  pkg-del.hpp  repo.cpp  repo.hpp  systems.hpp
src/account/: login.go  register.go
src/cli/: init.go
src/cmds/: clear.go  cmds.go  ls.go
src/folder/: settings.json
src/pkg/: install.go  remove.go
src/user/: user.go
